--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,76 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.app{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+
+
+.hitbox{
+  position:absolute;
+  height: 10vw;
+  width: 10vw;
+  border:4px solid rgb(255, 0, 0);
+  border-radius: 50%;
+  display: flex;
+  /* align-items: flex-start; */
+  align-items: center;
+  justify-content: center;
+}
+
+.hitbox > h3 {
+  color:white;
+  color:black;
+  background-color: white;
+  padding: 2px 10px;
+  opacity: 70%;
+}
+
+
+header{
+  position:fixed;
+  text-align: center;
+  top:0;
+  width: 100%;
+  z-index: 1;
+}
+
+.top-header{
+  color:white;
+  padding: 20px;
+  background-color: rgb(34, 34, 44);
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  gap: 100px;
+}
+
+.avatars{
+  display: flex;
+  gap: 32px;
+}
+
+.avatar{
+  transition: opacity 100ms ease-in;
+}
+
+.avatar > img{
+  height: 100px;
+  width:100px;
+  border-radius: 100px;
+  border:none;
+}
+
+.avatar > p{
+  margin:0;
+}
+
+.bottom-header{
+  padding: 20px;
+}
