--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,53 @@ code {
   justify-content: center;
 }
 
+.intro{
+  /* position:fixed; */
+  border:2px solid black;
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  z-index: 2;
+  /* height: 100vh; */
+  /* width: 100vw; */
+  /* top: 0; */
+}
 
+.filler{
+  position: fixed;
+  top:0;
+  background-color: black;
+  height: 100vh;
+  width: 100vw;
+  opacity: 70%;
+}
+.intro-modal{
+  position:fixed;
+  background-color: white;
+  text-align:center;
+  width: 40%;
+  top: 10%; 
+  padding: 20px;
+  display:flex;
+  flex-direction: column;
+  gap: 32px;
+}
+
+.intro-modal > h2 {
+  margin:0;
+}
+
+.intro-posters{
+  display: flex;
+  justify-content: space-evenly;
+  gap: 32px;
+}
+
+.intro-posters > img{
+  width: 100px;
+  height:auto;
+}
 
 .hitbox{
   position:absolute;
@@ -29,9 +75,9 @@ code {
   border:4px solid rgb(255, 0, 0);
   border-radius: 50%;
   display: flex;
-  /* align-items: flex-start; */
   align-items: center;
   justify-content: center;
+  z-index: 0;
 }
 
 .hitbox > h3 {
