--- a/src/index.css
+++ b/src/index.css
@@ -21,16 +21,11 @@ code {
 }
 
 .intro{
-  /* position:fixed; */
   border:2px solid black;
   background-color: black;
   display: flex;
   flex-direction: column;
   align-items: center;
-  z-index: 2;
-  /* height: 100vh; */
-  /* width: 100vw; */
-  /* top: 0; */
 }
 
 .filler{
@@ -40,17 +35,21 @@ code {
   height: 100vh;
   width: 100vw;
   opacity: 70%;
+  z-index: 2;
 }
 .intro-modal{
   position:fixed;
   background-color: white;
   text-align:center;
-  width: 40%;
-  top: 10%; 
+  width: 600px;
+  top: 5%; 
   padding: 20px;
   display:flex;
   flex-direction: column;
+  align-items: center;
   gap: 32px;
+  z-index: 2;
+  border-radius: 4%;
 }
 
 .intro-modal > h2 {
@@ -64,8 +63,33 @@ code {
 }
 
 .intro-posters > img{
-  width: 100px;
+  width: 23%;
   height:auto;
+}
+
+.start-button, 
+.submit-score,
+.try-again{
+  padding: 10px 20px;
+  font-size:2rem;
+  border-radius: 30px;
+  cursor: pointer;
+  color:white;
+  background-color: black;
+  transition: color 100ms ease-in-out, background-color 100ms ease-in-out;
+}
+
+.start-button:hover, 
+.submit-score:hover,
+.try-again:hover{
+  background-color: white;
+  color:black;
+}
+
+.start-button:active, 
+.submit-score:active,
+.try-again:active{
+  background-color: rgb(230, 230, 230);
 }
 
 .hitbox{
@@ -86,6 +110,7 @@ code {
   background-color: white;
   padding: 2px 10px;
   opacity: 70%;
+  font-size: 1em;
 }
 
 
@@ -105,6 +130,12 @@ header{
   justify-content: center;
   align-items: center;
   gap: 100px;
+}
+
+.timer > h1 {
+  color: white;
+  background:none;
+  font-size: 3rem;
 }
 
 .avatars{
@@ -127,6 +158,51 @@ header{
   margin:0;
 }
 
-.bottom-header{
-  padding: 20px;
+.leaderboards{
+  width: 70%;
+  margin:auto;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap :32px;
+}
+
+.score-form{
+  text-align: center;
+  display:flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.score-form > h1{
+  margin-bottom:0;
+}
+
+.score-form > input{
+  text-align: center;
+  padding: 5px 10px;
+  font-size: 2rem;
+}
+
+.player-scores{
+  height:350px;
+  overflow: auto;
+  width: 70%;
+  margin:0 auto;
+}
+
+table{
+  margin:auto;
+  width:95%;
+  table-layout: fixed;
+  border-collapse: collapse;
+  border:2px solid black;
+}
+
+th, td{
+  border-bottom:2px solid black;
+  font-size: 2rem;
+  text-align: center;
+  font-weight: bold;
 }
